--- a/src/app/main/pages/evaluations/evaluations.component.html
+++ b/src/app/main/pages/evaluations/evaluations.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <h1 style="font-size: 2.5em; margin-left: 20px; font-weight: bold;">Evaluaciones</h1>
+  <div class="header-container">
+    <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">table_view</mat-icon>
+    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Evaluaciones</h1>
+  </div>
   <div class="container-body">
     <nav mat-tab-nav-bar>
       <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.link" routerLinkActive #rla="routerLinkActive"
