--- a/src/app/main/pages/evaluations/evaluations.component.scss
+++ b/src/app/main/pages/evaluations/evaluations.component.scss
@@ -1,5 +1,9 @@
 .container {
-    margin: 40px 70px 40px 70px;
+    margin: 30px 70px 30px 70px;
+}
+
+.header-container {
+    display: inline-flex;
 }
 
 .label:active {
