--- a/src/app/main/pages/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spare-parts/spare-parts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">verified</mat-icon>
-        <h1 style="font-size: 2.5em; margin-left: 20px;">Revisión de repuestos</h1>
+        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Revisión de repuestos</h1>
 
         <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
             id="fileInput2">
