--- a/src/app/main/pages/summary/summary.component.html
+++ b/src/app/main/pages/summary/summary.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">fact_check</mat-icon>
-        <h1 style="font-size: 2.5em; margin-left: 20px;">Resumen</h1>
+        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">description</mat-icon>
+        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Resumen</h1>
     </div>
     <div class="body-container">
         <ng-container *ngIf="summary$ | async; else default">
