--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header-container">
     <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">turned_in</mat-icon>
-    <h1 style="font-size: 2.5em; margin-left: 20px;">Mejoras</h1>
+    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Mejoras</h1>
     <button type="file" aria-label="add" mat-button class="btn-add" (click)="openDialog('create')">
       <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
       CREAR
