--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p>not-found works!</p>
+<div class="container">
+    <div class="default">
+        <p class="default-title">Sección en construcción</p>
+        <img class="default-image" src="../../../assets/svg/under-construction.svg" alt="sección en construcción">
+    </div>
+    
+
+</div>
