--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,23 +19,58 @@ $ingenieria-dsp-warn: mat-palette($mat-red);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$ingenieria-dsp-theme: mat-light-theme((
-  color: (
-    primary: $ingenieria-dsp-primary,
-    accent: $ingenieria-dsp-accent,
-    warn: $ingenieria-dsp-warn,
+$ingenieria-dsp-theme: mat-light-theme(
+  (
+    color: (
+      primary: $ingenieria-dsp-primary,
+      accent: $ingenieria-dsp-accent,
+      warn: $ingenieria-dsp-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($ingenieria-dsp-theme);
 
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .ms-fill {
   flex: auto 1 1;
+}
+
+.header-container-title {
+  font-size: 2.2em;
+  margin-left: 20px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f2c94c;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f2c94c;
 }
