🚧 delete history dialog

--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.html
@@ -1,8 +1,7 @@
-<p>history-edit-dialog works!</p>
 <div class="container">
     <h2 mat-dialog-title style="display: flex;padding-bottom: 0px;margin-bottom: 0px;">
         <div style="margin-top: 5px; margin-right: 15px; ">
-            <mat-icon mat-list-icon>add_circle_outline</mat-icon>
+            <mat-icon mat-list-icon>edit</mat-icon>
         </div> 
         Editar solicitud    
         <div  mat-dialog-close style="margin-top: 5px; margin-left: 290px;border:white;cursor: pointer;" >
