--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-delete-dialog/history-delete-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-delete-dialog/history-delete-dialog.component.html
@@ -2,10 +2,9 @@
 
     <h2 mat-dialog-title style="display: flex; padding-bottom: 0px;margin-bottom: 0px;">
         <div style="margin-top: 5px; margin-right: 15px;" mat-dialog-close>
-            <mat-icon mat-list-icon>settings</mat-icon>
+            <mat-icon mat-list-icon>delete</mat-icon>
         </div> 
-        Configuraciones 
-        
+        Borrar         
         <div  mat-dialog-close style="margin-top: 5px; margin-left: 220px;cursor: pointer;"  >
             <mat-icon >clear</mat-icon>
         </div>        
@@ -13,13 +12,13 @@
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
         <mat-dialog-content style="margin-top: 20px;">
-            <p style="text-align: center;">¿Esta seguro de borrar la solicitud con OT - 00000000000?</p>
+            <p style="text-align: center;">¿Esta seguro de borrar la solicitud con OT - {{data.otMain}}?</p>
             
            
         </mat-dialog-content>
         <mat-dialog-actions align="end">
             <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save">GUARDAR</button>
+            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="deteteEvaluation()">SI, BORRAR</button>
         </mat-dialog-actions>
 </div> 
 
