--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -4,88 +4,92 @@
     <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
     CREAR
   </button>
-
-    <div class="container-table">   <!-- *ngIf="improvement$ |async" -->
+  
+    <div class="container-table" *ngIf="evaluation$ |async">   
         <table mat-table [dataSource]="historyDataSource" class="mat-elevation-z8">
   
           <ng-container matColumnDef="otMain">
             <th mat-header-cell *matHeaderCellDef> Orden de trabajo </th>
-            <td mat-cell *matCellDef="let element"> {{(element.date.seconds * 1000) | date : 'dd/MM/yy'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.otMain}} </td>
           </ng-container>
   
           <ng-container matColumnDef="otChild">
             <th mat-header-cell *matHeaderCellDef>Segmento/Operacion </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.otChild}} </td>
           </ng-container>
 
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> Correlativo </th>
-            <td mat-cell *matCellDef="let element"> {{element.component}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
           </ng-container>
 
           <ng-container matColumnDef="partNumber">
             <th mat-header-cell *matHeaderCellDef>Nro de parte</th>
-            <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.partNumber}} </td>
           </ng-container>
 
           <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef>Descripcion </th>
-            <td mat-cell *matCellDef="let element"> {{element.criticalPart ? 'Si':'No'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
           </ng-container>
                   
           <ng-container matColumnDef="internalStatus">
             <th mat-header-cell *matHeaderCellDef> Estado </th>
             <td mat-cell *matCellDef="let element">
               <button mat-button (click)="showImprovementEntry(element)"
-                [ngClass]="{'btn-state-register': element.state==='registered','btn-state-validate': element.state==='validated'}">
-                {{element.state === 'registered' ? 'Registrado':'Validado'}}
+                [ngClass]="{'btn-state-registered': element.internalStatus==='registered'
+                           ,'btn-state-progress': element.internalStatus==='progress'
+                           ,'btn-state-consultation': element.internalStatus==='consultation'
+                           ,'btn-state-finalizado': element.internalStatus==='finalized'
+                          }">
+                {{element.internalStatus === 'registered' ? 'Registrado':'Validado'}}
               </button>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="result">
               <th mat-header-cell *matHeaderCellDef> Resultado </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.result}} </td>
             </ng-container>
 
           <ng-container matColumnDef="observations">
               <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.observations}} </td>
             </ng-container>
 
           <ng-container matColumnDef="quantity">
               <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
           </ng-container>
 
           <ng-container matColumnDef="workshop">
               <th mat-header-cell *matHeaderCellDef> Taller </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.workshop}} </td>
           </ng-container>
 
           <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef>Tipo de atencion </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.status}} </td>
           </ng-container>
 
           <ng-container matColumnDef="registryDate">
               <th mat-header-cell *matHeaderCellDef> Fecha de Solicitud </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{(element.registryDate.seconds * 1000) | date : 'dd/MM/yy'}} </td>
           </ng-container> 
 
           <ng-container matColumnDef="user">
               <th mat-header-cell *matHeaderCellDef> Usuario </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.user}} </td>
           </ng-container>  
 
           <ng-container matColumnDef="wof">
               <th mat-header-cell *matHeaderCellDef>Solicitud TR </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.wof}} </td>
           </ng-container>  
 
           <ng-container matColumnDef="task">
               <th mat-header-cell *matHeaderCellDef> Trabajo </th>
-              <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.task}} </td>
           </ng-container> 
           
           <ng-container matColumnDef="actions" stickyEnd>
@@ -99,7 +103,7 @@
                     <mat-icon>edit</mat-icon>
                     Editar
                   </button>
-                  <button *ngIf="element.state==='registered'" class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
+                  <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
                     <mat-icon>delete</mat-icon>
                     Borrar
                   </button>
