--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
@@ -13,3 +13,23 @@ table{
     margin-left:10px ;
     padding: 0px 30px 0px 30px;
   }
+
+.btn-state-registered{
+    background: rgba(98, 0, 238, 0.38);
+    color: black;
+}
+    
+.btn-state-progress{
+    background: #F2C94C;
+    color: black;
+}
+
+.btn-state-finalizado{
+    background: #27AE60;
+    color: white;
+}
+
+.btn-state-consultation{
+    background: #F2994A ;
+    color: white;
+}
