:art: Question process dialog

--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -48,7 +48,7 @@
               <mat-icon>help</mat-icon>
               Consultar
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="responseDialog()">
               <mat-icon>question_answer</mat-icon>
               Responder
             </button>
