--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
@@ -1,1 +1,69 @@
-<p>evaluations-response-dialog works!</p>
+<h2 mat-dialog-title>
+    <div class="container-h2">
+        <button mat-icon-button class="container-h2__button">
+            <mat-icon class="container-h2__icon">question_answer</mat-icon>
+            <span class="container-h2__title">
+                Responder
+            </span>
+        </button>
+        <button mat-icon-button mat-dialog-close>
+            <mat-icon class="container-h2__icon-close">close</mat-icon>
+        </button>
+    </div>
+    <mat-divider style="margin-top: 20px;"></mat-divider>
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+</h2>
+<mat-dialog-content class="mat-typography">
+    <!-- <mat-list role="list"> -->
+    <mat-list-item role="listitem" class="listitem-content">OT MAIN:</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">OT CHILD:</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Correlativo</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Número de Parte</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Descripción</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Tipo de Atención</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Usuario</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">WOF (Orden de fabricación)</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Trabajo</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Taller</mat-list-item>
+    <mat-list-item role="listitem" class="listitem-content">Observaciones</mat-list-item>
+    <mat-divider style="margin-top: 20px;"></mat-divider>
+    <form>
+        <div class="item-consult">
+            <button mat-icon-button>
+                <mat-icon>help_center</mat-icon>
+                <span style="margin-left: 20px;"> 
+                    Consulta
+                </span>
+            </button>
+        </div>
+        <mat-list-item role="listitem" class="item-question">¿Como debo realizar el primer ensayo de material?</mat-list-item>
+        <div class="container-h2__image">
+            <mat-card class="mat-elevation-z0">
+                <img src="../../../../../../../assets/img/default.png" alt="">
+            </mat-card>
+        </div>
+        <div class="item-consult">
+            <button mat-icon-button>
+                <mat-icon>help_center</mat-icon>
+                <span style="margin-left: 20px;"> 
+                    Respuesta
+                </span>
+            </button>
+        </div>
+        <div class="form-inputs">
+            <mat-form-field appearance="outline">
+                <mat-label>Escribe tu respuesta</mat-label>
+                <input matInput placeholder="Resultado">
+            </mat-form-field>
+        </div>
+        <div class="card-img">
+            <div class="card-img__background">
+                
+            </div>
+        </div>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial>GUARDAR</button>
+</mat-dialog-actions>
