:art: add observation evaluation click

--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -40,7 +40,7 @@
               <mat-icon>timeline</mat-icon>
               Línea de tiempo
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="observationsDialog()">
               <mat-icon>remove_red_eye</mat-icon>
               Observaciones
             </button>
