:bug: :art:   create dialog history

--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.html
@@ -1,97 +1,99 @@
-<div class="container">
-    <h2 mat-dialog-title style="display: flex;padding-bottom: 0px;margin-bottom: 0px;">
-        <div style="margin-top: 5px; margin-right: 15px; ">
-            <mat-icon mat-list-icon>add_circle_outline</mat-icon>
-        </div> 
-        Nueva solicitud    
-        <div  mat-dialog-close style="margin-top: 5px; margin-left: 290px;border:white;cursor: pointer;" >
-            <mat-icon >clear</mat-icon>
-        </div>      
-    </h2>
+<div class="container" style="max-width: 600px; min-width: 252px;">
+    <div mat-dialog-title class="header">
+        <mat-icon mat-list-icon class="header__icon">add_circle_outline</mat-icon>
+        <h3 class="header__title"> Nueva solicitud</h3>
+        <span class="ms-fill"></span>
+        <button mat-icon-button mat-dialog-close class="header__close">
+            <mat-icon>clear</mat-icon>
+        </button>
+    </div>
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+
     <form class="container-form" [formGroup]="createEvaluateForm" autocomplete="off">
         <mat-dialog-content class="mat-typography">
             <div class="inputs">
-                
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Orden</mat-label>
-                <input type="text" matInput placeholder="Orden" formControlName="otMain">
-                <mat-error *ngIf="createEvaluateForm.controls['otMain'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Segmento/Operacion</mat-label>
-                <input matInput placeholder="Segmento/Operacion" formControlName="otChild">
-                <mat-error type="text" *ngIf="createEvaluateForm.controls['otChild'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>  
+                <mat-form-field appearance="outline">
+                    <mat-label>Orden</mat-label>
+                    <input type="text" matInput placeholder="Orden" formControlName="otMain">
+                    <mat-error *ngIf="createEvaluateForm.controls['otMain'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Correlativo</mat-label>
-                <input type="number" matInput placeholder="Correlativo" formControlName="position">
-                <mat-error *ngIf="createEvaluateForm.controls['position'].errors" >
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>   
+                <mat-form-field appearance="outline">
+                    <mat-label>Segmento/Operacion</mat-label>
+                    <input matInput placeholder="Segmento/Operacion" formControlName="otChild">
+                    <mat-error type="text" *ngIf="createEvaluateForm.controls['otChild'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>N° de Partes</mat-label>
-                <input type="text" matInput placeholder="N° de partes" formControlName="partNumber">
-                <mat-error *ngIf="createEvaluateForm.controls['partNumber'].errors" >
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>         
+                <mat-form-field appearance="outline">
+                    <mat-label>Correlativo</mat-label>
+                    <input type="number" matInput placeholder="Correlativo" formControlName="position">
+                    <mat-error *ngIf="createEvaluateForm.controls['position'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Descripcion</mat-label>
-                <input type="text" matInput placeholder="Descripcion" formControlName="description">
-                <mat-error *ngIf="createEvaluateForm.controls['description'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>                
+                <mat-form-field appearance="outline">
+                    <mat-label>N° de Partes</mat-label>
+                    <input type="text" matInput placeholder="N° de partes" formControlName="partNumber">
+                    <mat-error *ngIf="createEvaluateForm.controls['partNumber'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Cantidad</mat-label>
-                <input type="number" matInput placeholder="Cantidad" formControlName="quantity">
-                <mat-error *ngIf="createEvaluateForm.controls['quantity'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>            
-                
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Tipo de atencion</mat-label>
-                <input type="text" matInput placeholder="Tipo de atencion" formControlName="status">
-                <mat-error *ngIf="createEvaluateForm.controls['status'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>                
+                <mat-form-field appearance="outline">
+                    <mat-label>Descripcion</mat-label>
+                    <input type="text" matInput placeholder="Descripcion" formControlName="description">
+                    <mat-error *ngIf="createEvaluateForm.controls['description'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>WOF (orden de fabricacion)</mat-label>
-                <input type="text" matInput placeholder="Tipo de atencion" formControlName="wof">
-                <mat-error *ngIf="createEvaluateForm.controls['wof'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>                
+                <mat-form-field appearance="outline">
+                    <mat-label>Cantidad</mat-label>
+                    <input type="number" matInput placeholder="Cantidad" formControlName="quantity">
+                    <mat-error *ngIf="createEvaluateForm.controls['quantity'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 200px;">
-                <mat-label>Trabajo</mat-label>
-                <input type="text" matInput placeholder="Trabajo" formControlName="task">
-                <mat-error *ngIf="createEvaluateForm.controls['task'].errors">
-                    Campo <strong>requerido.</strong>
-                </mat-error>
-            </mat-form-field>     
+                <mat-form-field appearance="outline">
+                    <mat-label>Tipo de atencion</mat-label>
+                    <input type="text" matInput placeholder="Tipo de atencion" formControlName="status">
+                    <mat-error *ngIf="createEvaluateForm.controls['status'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>WOF (orden de fabricacion)</mat-label>
+                    <input type="text" matInput placeholder="Tipo de atencion" formControlName="wof">
+                    <mat-error *ngIf="createEvaluateForm.controls['wof'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Trabajo</mat-label>
+                    <input type="text" matInput placeholder="Trabajo" formControlName="task">
+                    <mat-error *ngIf="createEvaluateForm.controls['task'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
 
             </div>
-                        
+
         </mat-dialog-content>
         <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="submit" mat-raised-button color="primary" class="footer__btn-save"   [disabled]="!createEvaluateForm.valid" (click)="save()">ENVIAR</button>
+            <button type="button" mat-stroked-button color="warn" class="footer__btn-close"
+                mat-dialog-close>CERRAR</button>
+            <button type="submit" mat-raised-button color="primary" class="footer__btn-save"
+                [disabled]="!createEvaluateForm.valid" (click)="save()">ENVIAR</button>
         </mat-dialog-actions>
     </form>
 </div>
