--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.scss
@@ -1,11 +1,34 @@
+.container {
+    width: 60vw;
+    min-width: 252px;
+    max-width: 600px;
 
-.container-form{
-    margin-top: 30px;
+    .header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 8px;
 
+        &__icon {
+            vertical-align: middle;
+            margin-right: 12px;
+        }
+
+        &__title {
+            margin: 0px;
+        }
+
+        &__close {
+            cursor: pointer;
+        }
+    }
 }
 
-.inputs{
+.container-form {
+    margin-top: 30px;
+}
+
+.inputs {
     display: grid;
     column-gap: 1em;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
