--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -9,32 +9,32 @@
         <table mat-table [dataSource]="historyDataSource" class="mat-elevation-z8">
   
           <ng-container matColumnDef="otMain">
-            <th mat-header-cell *matHeaderCellDef> Orden de trabajo </th>
+            <th mat-header-cell *matHeaderCellDef class="table-header"> OT MAIN </th>
             <td mat-cell *matCellDef="let element"> {{element.otMain}} </td>
           </ng-container>
   
           <ng-container matColumnDef="otChild">
-            <th mat-header-cell *matHeaderCellDef>Segmento/Operacion </th>
+            <th mat-header-cell *matHeaderCellDef class="table-header">OT CLILD </th>
             <td mat-cell *matCellDef="let element"> {{element.otChild}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> Correlativo </th>
+          <ng-container matColumnDef="position"  >
+            <th mat-header-cell *matHeaderCellDef class="table-header" > Correlativo </th>
             <td mat-cell *matCellDef="let element"> {{element.position}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="partNumber">
-            <th mat-header-cell *matHeaderCellDef>Nro de parte</th>
+          <ng-container matColumnDef="partNumber" >
+            <th mat-header-cell *matHeaderCellDef class="table-header" >Nro de parte</th>
             <td mat-cell *matCellDef="let element"> {{element.partNumber}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef>Descripcion </th>
+          <ng-container matColumnDef="description" >
+            <th mat-header-cell *matHeaderCellDef class="table-header" >Descripcion </th>
             <td mat-cell *matCellDef="let element"> {{element.description}} </td>
           </ng-container>
                   
-          <ng-container matColumnDef="internalStatus">
-            <th mat-header-cell *matHeaderCellDef> Estado </th>
+          <ng-container matColumnDef="internalStatus" >
+            <th mat-header-cell *matHeaderCellDef class="table-header" > Estado </th>
             <td mat-cell *matCellDef="let element">
               <button mat-button (click)="showImprovementEntry(element)"
                 [ngClass]="{'btn-state-registered': element.internalStatus==='registered'
@@ -47,53 +47,53 @@
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="result">
-              <th mat-header-cell *matHeaderCellDef> Resultado </th>
+          <ng-container matColumnDef="result" >
+              <th mat-header-cell *matHeaderCellDef class="table-header" > Resultado </th>
               <td mat-cell *matCellDef="let element"> {{element.result}} </td>
             </ng-container>
 
-          <ng-container matColumnDef="observations">
-              <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+          <ng-container matColumnDef="observations" >
+              <th mat-header-cell *matHeaderCellDef class="table-header" > Observaciones </th>
               <td mat-cell *matCellDef="let element"> {{element.observations}} </td>
             </ng-container>
 
           <ng-container matColumnDef="quantity">
-              <th mat-header-cell *matHeaderCellDef> Cantidad </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header"  > Cantidad </th>
               <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
           </ng-container>
 
           <ng-container matColumnDef="workshop">
-              <th mat-header-cell *matHeaderCellDef> Taller </th>
+              <th mat-header-cell *matHeaderCellDef  class="table-header" > Taller </th>
               <td mat-cell *matCellDef="let element"> {{element.workshop}} </td>
           </ng-container>
 
           <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef>Tipo de atencion </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header" >Tipo de atencion </th>
               <td mat-cell *matCellDef="let element"> {{element.status}} </td>
           </ng-container>
 
           <ng-container matColumnDef="registryDate">
-              <th mat-header-cell *matHeaderCellDef> Fecha de Solicitud </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header"  > Fecha de Solicitud </th>
               <td mat-cell *matCellDef="let element"> {{(element.registryDate.seconds * 1000) | date : 'dd/MM/yy'}} </td>
           </ng-container> 
 
           <ng-container matColumnDef="user">
-              <th mat-header-cell *matHeaderCellDef> Usuario </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header"  > Usuario </th>
               <td mat-cell *matCellDef="let element"> {{element.user}} </td>
           </ng-container>  
 
           <ng-container matColumnDef="wof">
-              <th mat-header-cell *matHeaderCellDef>Solicitud TR </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header"  >Solicitud TR </th>
               <td mat-cell *matCellDef="let element"> {{element.wof}} </td>
           </ng-container>  
 
           <ng-container matColumnDef="task">
-              <th mat-header-cell *matHeaderCellDef> Trabajo </th>
+              <th mat-header-cell *matHeaderCellDef class="table-header"   class="table-header" > Trabajo </th>
               <td mat-cell *matCellDef="let element"> {{element.task}} </td>
           </ng-container> 
           
           <ng-container matColumnDef="actions" stickyEnd>
-            <th mat-header-cell *matHeaderCellDef>
+            <th mat-header-cell *matHeaderCellDef class="table-header"  >
               Acciones
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
@@ -107,9 +107,13 @@
                     <mat-icon>delete</mat-icon>
                     Borrar
                   </button>
-                  <button class="w3-small" mat-menu-item (click)="openDialog('validate', element, i)">
-                    <mat-icon>check_circle</mat-icon>
+                  <button class="w3-small" mat-menu-item (click)="openDialog('oservation', element, i)">
+                    <mat-icon>remove_red_eye</mat-icon>
                     Observaciones
+                  </button>
+                  <button class="w3-small" mat-menu-item (click)="openDialog('image', element, i)">
+                    <mat-icon>add_photo_alternate</mat-icon>
+                    Imágenes
                   </button>
                 </mat-menu>
   
