--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
@@ -36,6 +36,7 @@
                 </span>
             </button>
         </div>
+        <div style="margin-top: 10px;"></div>
         <mat-list-item role="listitem" class="item-question">¿Como debo realizar el primer ensayo de material?</mat-list-item>
         <div class="container-h2__image">
             <mat-card class="mat-elevation-z0">
