--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
@@ -10,31 +10,29 @@
     </h2>
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-    <form [formGroup]="observationFormGroup" class="timer-container" style="margin-top: 20px;">
-        <mat-dialog-content >
-            <p ><span style="font-weight: bold;"> OT MAIN :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> OT CHILD :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> Correlativo :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> N° de parte :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> Descripcion :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> Tipo de Atencion :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> Usuario :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> XXXXXXXx</p>
-            <p ><span style="font-weight: bold;"> Trabajo :</span> XXXXXXXx</p>
+    <mat-dialog-content >
+        <form [formGroup]="observationFormGroup" class="timer-container" style="margin-top: 20px;">
+            <p ><span style="font-weight: bold;"> OT MAIN :</span> {{data.otMain ? data.otMain : ''}}</p>
+            <p ><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
+            <p ><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
+            <p ><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+            <p ><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
+            <p ><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
+            <p ><span style="font-weight: bold;"> Usuario :</span> {{data.user ? data.user : ''}} </p>
+            <p ><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
+            <p ><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
            
             <mat-form-field appearance="outline" style="width: 400px;">
                 <mat-label>Observaciones</mat-label>
-                <textarea matInput placeholder="XXXXXXXXXXXXXXXx" name="area" required></textarea>
-                <mat-error *ngIf="observationFormGroup.controls['area'].errors">
+                <textarea matInput placeholder="Observaciones" formControlName="observation" required></textarea>
+                <mat-error *ngIf="observationFormGroup.controls['observation'].errors">
                     Campo <strong>requerido.</strong>
                 </mat-error>
             </mat-form-field>
-            
-                
-            </mat-dialog-content>
-            <mat-dialog-actions align="end">
-                <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-                <button type="button" mat-raised-button color="primary" class="footer__btn-save">GUARDAR</button>
-            </mat-dialog-actions>
-    </form>
+        </form>                           
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="button" mat-raised-button color="primary"   [disabled]="observationFormGroup.status != 'VALID'" class="footer__btn-save" (click)="save()">GUARDAR</button>
+    </mat-dialog-actions>
 </div> 
