➕ taller in history created dialog

--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.html
@@ -91,7 +91,7 @@
         </mat-dialog-content>
         <mat-dialog-actions align="end">
             <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="submit" mat-raised-button color="primary" class="footer__btn-save"   [disabled]="!createEvaluateForm.valid" (click)="save()">ENVIAR</button>
+            <button type="submit" mat-raised-button color="primary" class="footer__btn-save"   [disabled]="!createEvaluateForm.valid" (click)="save()">GUARDAR</button>
         </mat-dialog-actions>
     </form>
 </div>
