--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-create-dialog/history-create-dialog.component.html
@@ -86,6 +86,14 @@
                     </mat-error>
                 </mat-form-field>
 
+                <mat-form-field appearance="outline">
+                    <mat-label>Taller</mat-label>
+                    <input type="text" matInput placeholder="Taller" formControlName="workshop">
+                    <mat-error *ngIf="createEvaluateForm.controls['workshop'].errors">
+                        Campo <strong>requerido.</strong>
+                    </mat-error>
+                </mat-form-field>
+
             </div>
 
         </mat-dialog-content>
@@ -93,7 +101,7 @@
             <button type="button" mat-stroked-button color="warn" class="footer__btn-close"
                 mat-dialog-close>CERRAR</button>
             <button type="submit" mat-raised-button color="primary" class="footer__btn-save"
-                [disabled]="!createEvaluateForm.valid" (click)="save()">ENVIAR</button>
+                [disabled]="!createEvaluateForm.valid" (click)="save()">GUARDAR</button>
         </mat-dialog-actions>
     </form>
 </div>
